# concise_json_schema

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  concise_schema.ebnf  example.cpp  run_coverage.sh
include/concise_json_schema/: Json.h  JsonException.h  JsonSerializerStd.h  Schema.h
src/: Json.cpp  JsonException.cpp  JsonSerializerStd.cpp  Schema.cpp
test/: CMakeLists.txt
test/concise_json_schema/: Json.cpp  JsonSerializer.cpp  Schema.cpp
